# srt-to-ndi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.todo  compile.bat  compile_commands.json
src/: main.cpp
